WIP on backport to 1.20.1